--- a/content/resources/24-209s04-th.md
+++ b/content/resources/24-209s04-th.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Caricature of George Bernard Shaw, drawn by Edmund Valtman (Image courtesy
   of the U.S. Library of Congress.)
-file: /media/courses/24-209-philosophy-in-film-and-other-media-spring-2004/f3d3ef3eb4fe1b3324a0c43fe2b66cc0_24-209s04-th.jpg
+file: /courses/24-209-philosophy-in-film-and-other-media-spring-2004/f3d3ef3eb4fe1b3324a0c43fe2b66cc0_24-209s04-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: "Caricature of George Bernard Shaw, drawn by Edmund Valtman (Image courtesy\
@@ -15,3 +15,5 @@ resourcetype: Image
 title: George Bernard Shaw (thumbnail)
 uid: f3d3ef3e-b4fe-1b33-24a0-c43fe2b66cc0
 ---
+Caricature of George Bernard Shaw, drawn by Edmund Valtman (Image courtesy of the U.S. Library of Congress.)
+
