--- a/content/resources/24-209s04-th.md
+++ b/content/resources/24-209s04-th.md
@@ -10,10 +10,10 @@ image_metadata:
   credit: ''
   image-alt: Caricature of George Bernard Shaw.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: George Bernard Shaw (thumbnail)
 uid: f3d3ef3e-b4fe-1b33-24a0-c43fe2b66cc0
 ---
 Caricature of George Bernard Shaw, drawn by Edmund Valtman (Image courtesy of the U.S. Library of Congress.)
-
