--- a/content/resources/24-209s04.md
+++ b/content/resources/24-209s04.md
@@ -10,10 +10,10 @@ image_metadata:
   credit: ''
   image-alt: Caricature of George Bernard Shaw.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: George Bernard Shaw
 uid: 628bb5cd-1f6f-2a3f-30dd-cb0e561c63ff
 ---
 Caricature of George Bernard Shaw, drawn by Edmund Valtman (Image courtesy of the U.S. Library of Congress.)
-
