Sync all content

--- a/content/resources/24-209s04.md
+++ b/content/resources/24-209s04.md
@@ -3,10 +3,12 @@ content_type: resource
 description: Caricature of George Bernard Shaw, drawn by Edmund Valtman (Image courtesy
   of the U.S. Library of Congress.)
 file: /courses/24-209-philosophy-in-film-and-other-media-spring-2004/628bb5cd1f6f2a3f30ddcb0e561c63ff_24-209s04.jpg
+file_size: 106562
 file_type: image/jpeg
 image_metadata:
   caption: "Caricature of George Bernard Shaw, drawn by Edmund Valtman (Image courtesy\
-    \ of the\_[U.S. Library of Congress](http://www.loc.gov/).)"
+    \ of the\_{{% resource_link \"84ca96e3-c607-44bb-a65a-b39b8abfb81e\" \"U.S. Library\
+    \ of Congress\" %}}.)"
   credit: ''
   image-alt: Caricature of George Bernard Shaw.
 learning_resource_types: []
