Sync all content

--- a/content/resources/24-209s04.md
+++ b/content/resources/24-209s04.md
@@ -7,8 +7,7 @@ file_size: 106562
 file_type: image/jpeg
 image_metadata:
   caption: "Caricature of George Bernard Shaw, drawn by Edmund Valtman (Image courtesy\
-    \ of the\_{{% resource_link \"84ca96e3-c607-44bb-a65a-b39b8abfb81e\" \"U.S. Library\
-    \ of Congress\" %}}.)"
+    \ of the\_[U.S. Library of Congress](http://www.loc.gov/).)"
   credit: ''
   image-alt: Caricature of George Bernard Shaw.
 learning_resource_types: []
