Sync all content

--- a/content/resources/24-209s04.md
+++ b/content/resources/24-209s04.md
@@ -7,7 +7,8 @@ file_size: 106562
 file_type: image/jpeg
 image_metadata:
   caption: "Caricature of George Bernard Shaw, drawn by Edmund Valtman (Image courtesy\
-    \ of the\_[U.S. Library of Congress](http://www.loc.gov/).)"
+    \ of the\_{{% resource_link \"37dc2bc4-8a6e-4b08-8aff-cd75d8a4b191\" \"U.S. Library\
+    \ of Congress\" %}}.)"
   credit: ''
   image-alt: Caricature of George Bernard Shaw.
 learning_resource_types: []
